Fix friendshit button z-index

--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -1040,6 +1040,7 @@ div.toolbar {
 			}
 			button.add-member {
 				display: none;
+				z-index : 100;
 			}
 			&:hover {
 				button.add-member {
